--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -3,6 +3,8 @@ name: Sphinx build
 on:
   push:
     branches: [main, release]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 
 jobs:
@@ -13,7 +15,7 @@ jobs:
     - name: Build HTML
       uses: ammaraskar/sphinx-action@0.4
       with:
-        pre-build-command: "apt-get update -y && apt-get install -y pandoc"
+        pre-build-command: "apt-get update -y && apt-get install -y pandoc gcc"
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
