--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,23 +1,6 @@
-autodoc
-jupyter
-m2r2==0.3.1
-matplotlib
-mistune<2.0.0
-myst-parser
-nbconvert==6.5.3
-nbsphinx
-notebook
-numpy
-pandas
-Pillow==9.3.0
-seaborn
-sphinx==4.3.1
-sphinx-autopackagesummary
-sphinx-pyreverse
-sphinx_diagrams
-sphinx_gallery==0.10.1
-sphinx_rtd_theme==1.0.0
-sphinxcontrib-napoleon
-sphinxemoji
+furo==2021.11.16
+sphinx-panels==0.6.0
+nbsphinx==0.8.9
+sphinx-rtd-theme==1.0.0
 torchlaplace
-tqdm
+ipykernel
